--- a/package.json
+++ b/package.json
@@ -9,21 +9,31 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.1",
+    "@react-three/drei": "^9.117.3",
+    "@react-three/fiber": "^8.17.10",
+    "@react-three/postprocessing": "^2.16.3",
+    "@splinetool/react-spline": "^4.0.0",
+    "@splinetool/runtime": "^1.9.46",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
+    "framer-motion": "^11.12.0",
+    "framer-motion-3d": "^11.12.0",
+    "gsap": "^3.12.5",
+    "leva": "^0.9.35",
     "mongodb": "^6.8.1",
     "mongoose": "^8.6.2",
-    "@gsap/react": "^2.1.1",
-    "gsap": "^3.12.5",
-    "smooth-scrollbar": "^8.8.4",
     "next": "14.2.9",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-merge-refs": "^2.1.1",
+    "smooth-scrollbar": "^8.8.4",
     "tailwindcss-autofill": "^1.0.2",
     "tailwindcss-shadow-fill": "^1.0.1",
-    "tailwindcss-text-fill": "^0.2.0"
+    "tailwindcss-text-fill": "^0.2.0",
+    "three": "^0.170.0"
   },
   "devDependencies": {
     "@types/node": "^20",
