--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "@splinetool/react-spline": "^4.0.0",
     "@splinetool/runtime": "^1.9.46",
     "@types/bcrypt": "^5.0.2",
+    "@types/three": "0.137.0",
     "bcrypt": "^5.1.1",
     "framer-motion": "^11.12.0",
     "framer-motion-3d": "^11.12.0",
     "gsap": "^3.12.5",
     "leva": "^0.9.35",
+    "lil-gui": "^0.20.0",
     "mongodb": "^6.8.1",
     "mongoose": "^8.6.2",
     "next": "14.2.9",
@@ -33,7 +35,9 @@
     "tailwindcss-autofill": "^1.0.2",
     "tailwindcss-shadow-fill": "^1.0.1",
     "tailwindcss-text-fill": "^0.2.0",
-    "three": "^0.170.0"
+    "three": "^0.170.0",
+    "three-custom-shader-material": "^3.0.0",
+    "three-stdlib": "2.8.4"
   },
   "devDependencies": {
     "@types/node": "^20",
