--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
       "@/*": ["./*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/SignUp/Form.tsx", "app/scroll/page.jsx", "components/Homepage/3dScenes/RobotScene.jsx", "components/Navbacomponents/Homepage/HeroSection/VaporWave.jsxrWave.jsx", "app/test/NumberCounter.jsx", "components/Homepage/SectionTwo/HorizontalCards.jsx", "components/Homepage/3dComponents/Robot.jsx", "components/Homepage/SectionFive/SectionFivePhone.jsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/SignUp/Form.tsx", "app/scroll/page.jsx", "components/Homepage/3dScenes/RobotScene.jsx", "components/Navbacomponents/Homepage/HeroSection/VaporWave.jsxrWave.jsx", "app/test/NumberCounter.jsx", "components/Homepage/SectionTwo/HorizontalCards.jsx", "components/Homepage/3dComponents/Robot.jsx", "components/Homepage/SectionFive/SectionFivePhone.jsx", "components/Homepage/SectionFive/SectionFive.jsx"],
   "exclude": ["node_modules"]
 }
